pkg/gateway/xds/translator/testdata/out/xds-ir/http-route-rewrite-url-host.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - gateway.envoyproxy.io
    name: first-listener/gateway_envoyproxy_io
    routes:
    - match:
        headers:
        - name: :authority
          stringMatch:
            exact: gateway.envoyproxy.io
        pathSeparatedPrefix: /origin
      name: rewrite-route
      route:
        appendXForwardedHost: true
        cluster: rewrite-route-dest
        hostRewriteLiteral: 3.3.3.3
        prefixRewrite: /rewrite
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.compressor/default/brotli:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.compressor/default/gzip:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.compressor/default/zstd:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.dynamic_forward_proxy/rewrite-route:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
